name:                ninetynine-haskell
version:             0.1.0.0
synopsis:            ninetynine-haskell problems
description:         Please see README.md
homepage:            http://github.com/sleep/ninetynine-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Lee
maintainer:          freshdried@gmail.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ninetynine-haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
